SimonStewart: Moving to Java 5. Firefox driver will now find the binary by looking at the 'firefox.bin' system property
r4357